# software-design-2025

./: LICENSE  README.md
.github/workflows/: app-ci.yml
defects-rfp/: README.md  diagram-activity.wsd  diagram-bpmn.wsd  diagram-class.md  diagram-deployment.md  diagram-flowchart.md  diagram-use-case.wsd  flowchart-text.md  use-case-text.md
terminal-emulator/: .gitignore  README.md  architecture.md  buildin.py  makefile  pyproject.toml
terminal-emulator/src/: builtins.py  context.py  exceptions.py  executor.py  io.py  main.py  models.py
terminal-emulator/tests/: test_context.py  test_io.py  test_run.py  test_test.py
